# the-hangar

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CONTRIBUTING.md  README.md  TODO-multi-component-composition.md  conftest.py  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: run-sortie.md
.github/workflows/: ci.yml
catalog/oas/: AeroPoint.yaml
catalog/ocp/: BasicMission.yaml  FullMission.yaml  MissionWithReserve.yaml
catalog/pyc/: Turbojet.yaml
catalog/slots/: oas_aerostruct.yaml  oas_vlm.yaml  oas_vlm_direct.yaml  pyc_turbojet.yaml
deploy/: .env.example  Caddyfile.example  README.md  debug.sh  docker-compose.prod.yml  hero-terminal.md  keycloak-setup.md  migration-from-oas.md  operations.md  user-guide.md
deploy/landing/: index.html
deploy/landing-company/: index.html
deploy/landing/studies/brelje-2018a/: index.html
deploy/landing/studies/reg28m-opt-refined/: index.html
deploy/scripts/: package-case-study.sh  patch-dag-static.py  unpack-case-study.sh
docker/: Caddyfile  docker-compose.yml
docs/: STUDIES.md  evt-server-plan.md  evtol-server-plan.md  hangar-range-safety-boundary.md  multi-tenant-identity.md
scripts/: dev-setup.sh  dev.sh  evtolpy-packaging.patch  setup-upstream.sh  sync-skills.sh  upstream-pins.env
skills/: design-study-workflow.md  multi-tool-composition.md  trade-study-setup.md
skills/domain/: aerostructural-formulation.md  component-catalog-guide.md  solver-selection.md
skills/hangar-mcp-guide/: SKILL.md  cross-tool.md  servers.md  workflows.md
skills/hangar-mcp-guide/examples/: cross_tool_oas_to_ocp.md  oas_basic.md
skills/new-tool/: SKILL.md
skills/omd/: plan-authoring-workflow.md  replan-workflow.md
skills/range-safety/: plan-validation-checklist.md
studies/regional-wing-opt/: generate_plans.py  run_study.sh
studies/regional-wing-opt/01-baseline/: decisions.yaml  metadata.yaml  plan.yaml  requirements.yaml
studies/regional-wing-opt/01-baseline/history/: v1.yaml  v2.yaml
studies/regional-wing-opt/02-mesh-ny07/: metadata.yaml  operating_points.yaml  plan.yaml
studies/regional-wing-opt/02-mesh-ny07/components/: wing.yaml
studies/regional-wing-opt/02-mesh-ny07/history/: v1.yaml  v2.yaml
studies/regional-wing-opt/02-mesh-ny11/: metadata.yaml
studies/regional-wing-opt/02-mesh-ny11/components/: wing.yaml
studies/regional-wing-opt/02-mesh-ny11/history/: v1.yaml  v2.yaml  v3.yaml
studies/regional-wing-opt/02-mesh-ny15/: metadata.yaml
studies/regional-wing-opt/02-mesh-ny15/components/: wing.yaml
studies/regional-wing-opt/02-mesh-ny15/history/: v1.yaml  v2.yaml  v3.yaml
studies/regional-wing-opt/02-mesh-ny21/: metadata.yaml
studies/regional-wing-opt/02-mesh-ny21/components/: wing.yaml
studies/regional-wing-opt/02-mesh-ny21/history/: v1.yaml  v2.yaml  v3.yaml
studies/regional-wing-opt/02-mesh-ny25/: metadata.yaml  plan.yaml
studies/regional-wing-opt/02-mesh-ny25/components/: wing.yaml
studies/regional-wing-opt/02-mesh-ny25/history/: v1.yaml  v2.yaml
studies/regional-wing-opt/03-opt-fuelburn/: decisions.yaml  metadata.yaml  plan.yaml
studies/regional-wing-opt/03-opt-fuelburn/components/: wing.yaml
studies/regional-wing-opt/03-opt-fuelburn/history/: v1.yaml  v2.yaml
studies/regional-wing-opt/04-sens-mach-072/: metadata.yaml  operating_points.yaml  plan.yaml
studies/regional-wing-opt/04-sens-mach-072/history/: v1.yaml  v2.yaml
studies/regional-wing-opt/04-sens-mach-075/: metadata.yaml  operating_points.yaml
studies/regional-wing-opt/04-sens-mach-075/history/: v1.yaml  v2.yaml  v3.yaml
studies/regional-wing-opt/04-sens-mach-081/: metadata.yaml  operating_points.yaml
studies/regional-wing-opt/04-sens-mach-081/history/: v1.yaml  v2.yaml  v3.yaml
studies/regional-wing-opt/04-sens-mach-084/: metadata.yaml  operating_points.yaml  plan.yaml
studies/regional-wing-opt/04-sens-mach-084/components/: wing.yaml
studies/regional-wing-opt/04-sens-mach-084/history/: v1.yaml  (+1 more)
studies/regional-wing-opt/04-sens-range-1500/: metadata.yaml  operating_points.yaml
studies/regional-wing-opt/04-sens-range-2500/: metadata.yaml  operating_points.yaml  plan.yaml
studies/regional-wing-opt/04-sens-range-3000/: metadata.yaml  operating_points.yaml  plan.yaml
studies/regional-wing-opt/04-sens-w0-35k/: metadata.yaml  operating_points.yaml  optimization.yaml
studies/regional-wing-opt/04-sens-w0-45k/: metadata.yaml  operating_points.yaml
studies/regional-wing-opt/04-sens-w0-50k/: metadata.yaml  operating_points.yaml
studies/regional-wing-opt/05-robust-init-thick/: metadata.yaml  plan.yaml
studies/regional-wing-opt/05-robust-init-wash/: metadata.yaml  plan.yaml
studies/regional-wing-opt/05-robust-lf25/: metadata.yaml  operating_points.yaml
studies/regional-wing-opt/05-robust-sf-125/: metadata.yaml  solvers.yaml
studies/regional-wing-opt/05-robust-sf-20/: metadata.yaml  optimization.yaml  plan.yaml
(+35 files in other folders)
