[project]
name = "hangar"
version = "0.1.0"
description = "Agentic engineering analysis tools"
requires-python = ">=3.11"
dependencies = [
    "hangar-sdk",
    "hangar-oas",
    "hangar-ocp",
    "hangar-pyc",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hangar-sdk = { workspace = true }
hangar-oas = { workspace = true }
hangar-ocp = { workspace = true }
hangar-pyc = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "golden_physics: physics-invariant golden tests",
    "golden_numerics: platform-dependent numeric baselines",
    "parity: parity tests vs direct OAS API",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
